# SecureFinancialGateway

./: .env  .gitignore  LICENSE  README.md  main  main.cpp
backend/: CMakeLists.txt
backend/apps/: GenerateToken  main.cpp
backend/include/gateway/: Listener.h  Session.h
backend/src/: Listener.cpp  Session.cpp  main.cpp
backend/utils/: GenerateHash  GenerateHash.cpp  GenerateToken.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/services/: api.ts
postgres/init/: 01-schema.sql  seed.sql
